# vrx_bringup

./: .gitignore  CMakeLists.txt  README.md  package.xml  vrx_gz_bringup.launch.xml
config/: coast_line0_crop.yaml  diagnostics.yaml  imu_to_twist_dynamic_reconfigure_params.yaml  imu_to_twist_smoother_dynamic_reconfigure_params.yaml  initial_pose_setter.yaml  mqtt_bridge.yaml  objects.xml
data/: control_state_machine.xml  make_pdf.sh  mission_state_machine.xml  navigation_state_machine.xml
launch/: bringup.launch  frame.launch  vrx_gz_bringup.launch.xml
launch/control/: control.launch
launch/perception/: hsv_filter.launch  image_processing.launch  localization.launch  perception.launch  pointcloud_processing.launch  preprocessing.launch
launch/planning/: planning.launch
launch/robot/: robot.launch
launch/simulation/: simulation.launch
launch/tools/: aws.launch  diagnostics.launch  mqtt.launch  save_object_image.launch  tools.launch  webrtc.launch
launch/visualization/: visualization.launch
rviz/: vrx.rviz
scripts/: initial_pose_setter.py
