<?xml version="1.0"?>
<package format="2">
  <name>vrx_bringup</name>
  <version>0.0.0</version>
  <description>The vrx_bringup package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>vrx_control</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>vrx_control</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>vrx_control</exec_depend>
  <exec_depend>rostate_machine</exec_depend>
  <exec_depend>pf_localization</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rostate_machine</exec_depend>
  <exec_depend>vrx_gazebo</exec_depend>
  <exec_depend>mqtt_bridge</exec_depend>
  <exec_depend>webrtc_ros</exec_depend>
  <exec_depend>opencv_apps</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
